Rewrite scripts and add config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   influxdb:
     # Full tag list: https://hub.docker.com/r/library/influxdb/tags/
     image: "influxdb"
+    env_file:
+    - db-variables.env
     volumes:
       # Mount for influxdb data directory
       - ./influxdb/data:/var/lib/influxdb
@@ -49,6 +51,7 @@ services:
   chronograf:
     # Full tag list: https://hub.docker.com/r/library/chronograf/tags/
     image: "chronograf"
+    # entrypoint: 'chronograf'
     entrypoint: 'chronograf --influxdb-url=http://influxdb:8086'
     environment:
       RESOURCES_PATH: "/usr/share/chronograf/resources"
@@ -67,7 +70,7 @@ services:
       - influxdb
       - telegraf
 
-  dashboard: 
+  grafana: 
     image: "grafana/grafana"
     ports:
       - "3001:3000"
